--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.iOS/packages.config
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.iOS/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LagoVista.Core" version="1.2.264-alpha1443" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core.Authentication" version="1.2.264-alpha1443" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core.Networking" version="1.2.264-alpha1443" targetFramework="xamarinios10" />
-  <package id="LagoVista.IoT.Logging" version="1.2.264-alpha1443" targetFramework="xamarinios10" />
-  <package id="LagoVista.UserAdmin.Models" version="1.2.264-alpha1443" targetFramework="xamarinios10" />
-  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="xamarinios10" />
-  <package id="Newtonsoft.Json" version="11.0.1-beta3" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core" version="2.1.439-beta1607" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core.Authentication" version="2.1.439-beta1607" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core.Networking" version="2.1.439-beta1607" targetFramework="xamarinios10" />
+  <package id="LagoVista.IoT.Logging" version="2.1.439-beta1607" targetFramework="xamarinios10" />
+  <package id="LagoVista.UserAdmin.Models" version="2.1.439-beta1607" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="xamarinios10" />
@@ -32,5 +32,5 @@
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.5.0.122203" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="3.1.0.697729" targetFramework="xamarinios10" />
 </packages>
