--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <NetStandardImplicitPackageVersion>2.0.1</NetStandardImplicitPackageVersion>
+    <NetStandardImplicitPackageVersion>2.0.3</NetStandardImplicitPackageVersion>
     <DebugType>Full</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Package.nuspec" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+    <PackageReference Include="Xamarin.Forms" Version="3.3.0.912540" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
