--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/LagoVista.XPlat.Sample.UWP.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/LagoVista.XPlat.Sample.UWP.csproj
@@ -20,7 +20,7 @@
     </PackageCertificateKeyFile>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <RuntimeIdentifiers>win10-arm;win10-arm-aot;win10-x86;win10-x86-aot;win10-x64;win10-x64-aot</RuntimeIdentifiers>
-    <PackageCertificateThumbprint>7CA8742AA5DBE0249A44F9D2BF86337F8953483B</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>2D689D80D6BDB21DDCA9B21DC91828426C3A2A8E</PackageCertificateThumbprint>
     <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
@@ -229,7 +229,7 @@
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>tempforbuilding.snk</AssemblyOriginatorKeyFile>
