--- a/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
+++ b/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <NetStandardImplicitPackageVersion>2.0.3</NetStandardImplicitPackageVersion>
@@ -8,20 +8,31 @@
     <None Remove="Package.nuspec" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1142-beta1228" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1142-beta1228" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1142-beta1228" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1142-beta1228" />
-    <PackageReference Include="Microsoft.AppCenter" Version="3.4.0" />
-    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="3.4.0" />
-    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="3.4.0" />
-    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="3.4.0" />
-    <PackageReference Include="Microsoft.NETCore.Platforms" Version="2.2.4" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1233-beta0543" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1233-beta0543" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1233-beta0543" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1233-beta0543" />
+    <PackageReference Include="Microsoft.AppCenter" Version="3.4.3" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="3.4.3" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="3.4.3" />
+    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="3.4.3" />
+    <PackageReference Include="Microsoft.NETCore.Platforms" Version="5.0.0-preview.8.20407.11" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1239" />
-    <PackageReference Include="LagoVista.Core" Version="2.1.1142-beta1228" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1233-beta0543" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.Client.Core\LagoVista.Client.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Views\DeviceAccess\BTDevicePickerView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\DeviceAccess\DFUUpdateView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\DeviceAccess\ProvisioningView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
