--- a/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
+++ b/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
@@ -19,15 +19,16 @@
     <Content Include="Icons\ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="2.1.1233-beta0543" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1233-beta0543" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1233-beta0543" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1233-beta0543" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1233-beta0543" />
-    <PackageReference Include="Microsoft.AppCenter" Version="3.4.3" />
-    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="3.4.3" />
-    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="3.4.3" />
-    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="3.4.3" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1285-beta1826" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1285-beta1826" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1285-beta1826" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1285-beta1826" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1285-beta1826" />
+    <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="2.1.1285-beta1826" />
+    <PackageReference Include="Microsoft.AppCenter" Version="4.0.0" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="4.0.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.0.0" />
+    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="4.0.0" />
     <PackageReference Include="Microsoft.AppCenter.Push" Version="3.4.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
