--- a/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
+++ b/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1285-beta1826" />
     <PackageReference Include="LagoVista.MediaServices.Models" Version="2.1.1285-beta1826" />
     <PackageReference Include="LagoVista.IoT.DeviceAdmin.Models" Version="2.1.1285-beta1826" />
+    <PackageReference Include="LagoVista.IoT.Deployment.Models" Version="2.1.1285-beta1826" />
     <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="2.1.1285-beta1826" />
     <PackageReference Include="Microsoft.AppCenter" Version="4.0.0" />
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="4.0.0" />
