--- a/src/LagoVista.XPlat.UWP/LagoVista.XPlat.UWP.csproj
+++ b/src/LagoVista.XPlat.UWP/LagoVista.XPlat.UWP.csproj
@@ -108,6 +108,7 @@
   <ItemGroup>
     <Compile Include="CustomRenderers\ButtonRenderer.cs" />
     <Compile Include="CustomRenderers\SwitchRenderer.cs" />
+    <Compile Include="CustomRenderers\TextBoxRenderer.cs" />
     <Compile Include="CustomRenderers\TitleBarButton.cs" />
     <Compile Include="Effects\UnderlineEffect.cs" />
     <Compile Include="Network\TCPClient.cs" />
