--- a/src/LagoVista.XPlat.UWP/LagoVista.XPlat.UWP.csproj
+++ b/src/LagoVista.XPlat.UWP/LagoVista.XPlat.UWP.csproj
@@ -107,10 +107,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CustomRenderers\ButtonRenderer.cs" />
+    <Compile Include="CustomRenderers\HyperLinkLabelRenderer.cs" />
     <Compile Include="CustomRenderers\SwitchRenderer.cs" />
     <Compile Include="CustomRenderers\TextBoxRenderer.cs" />
     <Compile Include="CustomRenderers\TitleBarButton.cs" />
     <Compile Include="Effects\UnderlineEffect.cs" />
+    <Compile Include="Extensions\ColorExtensions.cs" />
     <Compile Include="Network\TCPClient.cs" />
     <Compile Include="Network\UDPClient.cs" />
     <Compile Include="Network\WebSocket.cs" />
