--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
@@ -111,22 +111,31 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>2.1.740-beta0913</Version>
+      <Version>2.1.1286-beta1412</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>2.1.740-beta0913</Version>
+      <Version>2.1.1286-beta1412</Version>
+    </PackageReference>
+    <PackageReference Include="LagoVista.IoT.Deployment.Models">
+      <Version>2.1.1285-beta1826</Version>
+    </PackageReference>
+    <PackageReference Include="LagoVista.IoT.DeviceMessaging.Models">
+      <Version>2.1.1285-beta1826</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>2.1.740-beta0913</Version>
+      <Version>2.1.1285-beta1826</Version>
+    </PackageReference>
+    <PackageReference Include="LagoVista.IoT.Pipeline.Models">
+      <Version>2.1.1285-beta1826</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>2.1.740-beta0913</Version>
+      <Version>2.1.1285-beta1826</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
       <Version>4.4.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>4.0.0.425677</Version>
+      <Version>4.8.0.1687</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -181,6 +190,11 @@
     <AndroidResource Include="Resources\drawable\applogo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties TriggeredFromHotReload="False" />
+    </VisualStudio>
+  </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
 		Other similar extension points exist, see Microsoft.Common.targets.
 		<Target Name="BeforeBuild">
