--- a/src/LagoVista.XPlat.Droid/LagoVista.XPlat.Droid.csproj
+++ b/src/LagoVista.XPlat.Droid/LagoVista.XPlat.Droid.csproj
@@ -44,7 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controls\CustomEntryRenderer.cs" />
+    <Compile Include="Controls\CustomPickerRenderer.cs" />
+    <Compile Include="Controls\HyperLinkLabelRenderer.cs" />
     <Compile Include="Controls\IconButtonRenderer.cs" />
+    <Compile Include="Controls\CustomTextAreaRenderer.cs" />
     <Compile Include="IconFonts\EntypoPlusModule.cs" />
     <Compile Include="IconFonts\FontAwesomeModule.cs" />
     <Compile Include="IconFonts\IconFontSupport.cs" />
@@ -57,6 +60,7 @@
     <Compile Include="Loggers\AppCenterLogger.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BluetoothSerial.cs" />
     <Compile Include="Services\ClipBoard.cs" />
     <Compile Include="Services\DispatcherServices.cs" />
     <Compile Include="Services\NetworkService.cs" />
@@ -72,13 +76,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core">
-      <Version>2.1.1285-beta1826</Version>
+      <Version>2.1.1286-beta1412</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>2.1.1285-beta1826</Version>
+      <Version>2.1.1286-beta1412</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>2.1.1285-beta1826</Version>
+      <Version>2.1.1286-beta1412</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
       <Version>2.1.1285-beta1826</Version>
