--- a/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
+++ b/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="Microsoft.AppCenter.Distribute" Version="4.1.0" />
     <PackageReference Include="Microsoft.AppCenter.Push" Version="3.4.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Resources\ClientResources.Designer.cs">
